# oversimplified_shop

./: Cargo.toml  README.md  task.txt
console_output/: Cargo.toml  help_output.txt
console_output/src/: lib.rs
products/: Cargo.toml
products/src/: lib.rs
src/: main.rs
static/: index.html  index.js  products.json  style.css
